<resources>
    <string name="app_name">Practice Score 2</string>
    <string name="title_text_A">Team A</string>
    <string name="default_score">0</string>
    <string name="btn_3_txt">+3 Points</string>
    <string name="btn_2_txt">+2 Points</string>
    <string name="btn_free_txt">Free Throw</string>
    <string name="reset_btn_txt">Reset</string>
    <string name="title_text_B">Team B</string>
</resources>
