<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <!-- This for Team A-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/team_a_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/title_text_A"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/score_count_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/default_score"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_3_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="score_3_teamA"
                android:text="@string/btn_3_txt" />

            <Button
                android:id="@+id/btn_2_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="score_2_teamA"
                android:text="@string/btn_2_txt" />

            <Button
                android:id="@+id/btn_free_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:onClick="score_free_teamA"
                android:text="@string/btn_free_txt" />

        </LinearLayout>


        <!-- This for Team B -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/team_b_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/title_text_B"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/score_count_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/default_score"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_3_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="score_3_teamB"
                android:text="@string/btn_3_txt" />

            <Button
                android:id="@+id/btn_2_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="score_2_teamB"
                android:text="@string/btn_2_txt" />

            <Button
                android:id="@+id/btn_free_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:onClick="score_free_teamB"
                android:text="@string/btn_free_txt" />

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/all_reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:onClick="resetMatch"
        android:text="@string/reset_btn_txt" />

</RelativeLayout>
